<resources>
    <string name="app_name">AsnRestAPI</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="comment_fragment_label">Comment Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Comment</string>


    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="id">ID</string>
    <string name="title">Title</string>
    <string name="body">Body</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>