<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/FirstFragment">

    <fragment
        android:id="@+id/FirstFragment"
        android:name="com.example.asnrestapi.FirstFragment"
        android:label="@string/first_fragment_label"
        tools:layout="@layout/fragment_first">

        <action
            android:id="@+id/action_FirstFragment_to_SecondFragment"
            app:destination="@id/SecondFragment" />
        <argument
            android:name="postid"
            app:argType="integer" />
    </fragment>
    <fragment
        android:id="@+id/SecondFragment"
        android:name="com.example.asnrestapi.SecondFragment"
        android:label="@string/second_fragment_label"
        tools:layout="@layout/fragment_second">

        <action
            android:id="@+id/action_SecondFragment_to_CommentFragment"
            app:destination="@id/CommentFragment" />
        <argument
            android:name="postid"
            app:argType="integer" />
    </fragment>

    <fragment
        android:id="@+id/CommentFragment"
        android:name="com.example.asnrestapi.CommentFragment"
        android:label="@string/comment_fragment_label"
        tools:layout="@layout/fragment_comment">

        <action
            android:id="@+id/action_SecondFragment_to_CommentFragment"
            app:destination="@id/CommentFragment" />

    </fragment>
</navigation>