<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondFragment">

    <TextView
        android:id="@+id/text_id_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/id"
        android:textAppearance="?attr/textAppearanceHeadline5"
        android:textAlignment="viewStart"
        android:layout_margin="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/text_id"
        app:layout_constraintBottom_toTopOf="@id/text_body_name"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/text_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_marginStart="72dp"
        android:textAlignment="viewStart"
        android:textAppearance="?attr/textAppearanceHeadline5"
        app:layout_constraintBottom_toTopOf="@id/text_body"
        app:layout_constraintStart_toEndOf="@id/text_body_name"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/text_body_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/body"
        android:textAppearance="?attr/textAppearanceHeadline5"

        android:layout_margin="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/text_body"
        app:layout_constraintTop_toBottomOf="@id/text_id_name"
        app:layout_constraintBottom_toTopOf="@id/text_title_name"
        tools:ignore="MissingConstraints" />
    <TextView
        android:id="@+id/text_body"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?attr/textAppearanceBody2"
        android:gravity="left"
        android:layout_margin="5dp"
        app:layout_constraintStart_toEndOf="@id/text_body_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_id"
        app:layout_constraintBottom_toTopOf="@id/text_title"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/text_title_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textAppearance="?attr/textAppearanceHeadline5"

        android:layout_margin="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/text_body"
        app:layout_constraintTop_toBottomOf="@id/text_body"

        tools:ignore="MissingConstraints" />
    <TextView
        android:id="@+id/text_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?attr/textAppearanceBody2"
        android:layout_margin="5dp"
        app:layout_constraintStart_toEndOf="@id/text_title_name"
        app:layout_constraintTop_toBottomOf="@id/text_body"

        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button_second"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/previous"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_body_name"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:ignore="MissingConstraints" />
</androidx.constraintlayout.widget.ConstraintLayout>